[package]
name = "activity_tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
rusqlite = "0.27"  # or your required version
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59.0", default-features = false, features = [
    "Win32_System_SystemInformation",
    "Win32_System_Memory",
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_ProcessStatus",
    "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(unix)'.dependencies]
x11 = "2.20"
xcb = "1.2"
